; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/ntfs/extr_attrib.c_GetBestFileNameFromRecord.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/ntfs/extr_attrib.c_GetBestFileNameFromRecord.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NTFS_FILE_NAME_POSIX = common dso_local global i32 0, align 4
@NTFS_FILE_NAME_WIN32 = common dso_local global i32 0, align 4
@NTFS_FILE_NAME_DOS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @GetBestFileNameFromRecord(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @NTFS_FILE_NAME_POSIX, align 4
  %9 = call i32* @GetFileNameFromRecord(i32 %6, i32 %7, i32 %8)
  store i32* %9, i32** %5, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %25

12:                                               ; preds = %2
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* @NTFS_FILE_NAME_WIN32, align 4
  %16 = call i32* @GetFileNameFromRecord(i32 %13, i32 %14, i32 %15)
  store i32* %16, i32** %5, align 8
  %17 = load i32*, i32** %5, align 8
  %18 = icmp eq i32* %17, null
  br i1 %18, label %19, label %24

19:                                               ; preds = %12
  %20 = load i32, i32* %3, align 4
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* @NTFS_FILE_NAME_DOS, align 4
  %23 = call i32* @GetFileNameFromRecord(i32 %20, i32 %21, i32 %22)
  store i32* %23, i32** %5, align 8
  br label %24

24:                                               ; preds = %19, %12
  br label %25

25:                                               ; preds = %24, %2
  %26 = load i32*, i32** %5, align 8
  ret i32* %26
}

declare dso_local i32* @GetFileNameFromRecord(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
